fix whitespace

--- a/css/screen.css
+++ b/css/screen.css
@@ -667,7 +667,7 @@ canvas{
 */
 
 .c-footer {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     right: 0;
     z-index: -1;
